--- a/CSS/style.css
+++ b/CSS/style.css
@@ -291,7 +291,7 @@ input.form-control{
     height: 4rem;
     box-sizing: border-box;
     background-color: #f2f0f0;
-    border: 1px solid #d9dadb;
+    border: 2px solid #d9dadb;
     border-radius: 0.3rem;
     padding: 0.3rem 1rem 0.3rem 1rem;
     font-size: 1.3rem;
@@ -300,7 +300,7 @@ input.form-control{
 }
 
 .form-control:focus,.form-control:focus-visible{
-    border: 2px solid #ed8805;
+    border: 2px solid #d9dadb;
     outline: none;
 }
 
@@ -310,12 +310,25 @@ textarea.form-control{
     height: 14rem;
     box-sizing: border-box;
     background-color: #f2f0f0;
-    border: 1px solid #d9dadb;
+    border: 2px solid #d9dadb;
     border-radius: 0.3rem;
     padding: 0.3rem 1rem 0.3rem 1rem;
     font-size: 1.3rem;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 600;
+}
+
+.form-control:valid:not(:focus){
+    border: 2px solid #07b52d;
+}
+
+.form-control:invalid:not(:focus):not(:placeholder-shown){
+    border: 2px solid #f2112f;
+}
+
+.error-message{
+    color: #f2112f;
+    font-size: 0.8rem;
 }
 
 footer{
@@ -331,14 +344,14 @@ footer{
     justify-content: center;
 }
 
-footer > span{
+.footer-span{
     font-family: 'Courier New', Courier, monospace;
     font-weight: 500;
     font-size: 1.2rem;
     margin: 0.4rem 0 0.4rem 0;
 }
 
-footer > span:first-of-type{
+.footer-span:first-of-type{
     font-weight: 600;
 }
 
