--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,10 @@
+*{
+    scrollbar-color: #ed8805 #f2f0f0;
+    scrollbar-width: thin;
+    scroll-margin: 0;
+    scroll-padding: 0;
+}
+
 html{
     font-size: 14px;
     scroll-behavior: smooth;
@@ -5,12 +12,28 @@ html{
 
 body{
     display: block;
-    width: 100vw;
+    width: calc(100vw - 9px);
     min-height: 90vh;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: 'Courier New', Courier, monospace;
+    background-color: #f2f0f0;
+}
+
+::-webkit-scrollbar{
+    width: 8px;
+    margin: 0;
+    padding: 0;
+}
+
+::-webkit-scrollbar-thumb{
+    border-radius: 4px;
+    background-color: #ed8805;
+    border: 0.5px solid #f07224;
+}
+
+::-webkit-scrollbar-track{
     background-color: #f2f0f0;
 }
 
@@ -287,7 +310,7 @@ a.default, a:hover{
 }
 
 input.form-control{
-    width: 90%;
+    width: 100%;
     height: 4rem;
     box-sizing: border-box;
     background-color: #f2f0f0;
@@ -306,8 +329,8 @@ input.form-control{
 
 textarea.form-control{
     resize: none;
-    width: 90%;
-    height: 14rem;
+    width: 100%;
+    height: 25rem;
     box-sizing: border-box;
     background-color: #f2f0f0;
     border: 2px solid #d9dadb;
@@ -316,19 +339,21 @@ textarea.form-control{
     font-size: 1.3rem;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 600;
+    overflow-y: auto;
 }
 
-.form-control:valid:not(:focus){
-    border: 2px solid #07b52d;
-}
-
-.form-control:invalid:not(:focus):not(:placeholder-shown){
+.form-control.touched:invalid:not(:focus){
     border: 2px solid #f2112f;
 }
 
 .error-message{
     color: #f2112f;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
+}
+
+button[disabled]{
+    cursor: not-allowed!important;
+    opacity: 0.6;
 }
 
 footer{
