Adjusted flex-wrap for Home section

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -97,6 +97,7 @@ header{
     padding: 0;
     border-top: 1px solid #ed8805;
     border-bottom: 1px solid #ed8805;
+    flex-wrap: wrap;
 }
 
 #MyProfilePicture{
