--- a/CSS/style.css
+++ b/CSS/style.css
@@ -43,65 +43,12 @@ header{
     justify-content: flex-start;
 }
 
-#PortfolioLogo{
-    height: 8vh;
-    width: 8vh;
-}
-
-#PortfolioTitle{
-    font-weight: bold;
-    font-size: 1.8rem;
-    margin-left: 1rem;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-#NavigationMenu{
-    list-style-type: none;
-    margin-left: auto;
-    margin-right: 1rem;
-    padding: 0;
-    display: inline-flex;
-    box-sizing: border-box;
-}
-
-#NavigationMenu > li{
-    margin-left: 1.5rem;
-    font-size: 1.3rem;
-    font-weight: normal;
-}
-
-.nav-link{
-    text-decoration: none;
-    color: black;
-    border: 1px solid #f07224;
-    border-radius: 1.4rem;
-    padding: 0.8rem;
-}
-
-.nav-link.default, .nav-link:hover{
-    background-color: #ed8805;
-    font-weight: bold;
-}
-
-#HomeCoverGreetings{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 4rem;
-    margin-block-start: 6rem;
-    margin-block-end: 0;
-}
-
 #HomeCoverProfession{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 2.5rem;
     font-weight: 600;
     margin-block-start: 0.7rem;
     margin-block-end: 0.7rem;
-}
-
-#ShortDescription{
-    font-size: 1.8rem;
-    margin-top: 3rem;
-    margin-bottom: 3rem;
 }
 
 #DownloadResumeBtnParent{
@@ -179,36 +126,14 @@ header{
     flex-wrap: wrap;
 }
 
-#GetToKnowMe > p{
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 1.3rem;
-    font-weight: normal;
-    padding: 1rem 1.5rem 1rem 1.5rem;
-    line-height: 1.7rem;
-    margin: 0 1.5rem 0 1.5rem;
-}
-
-#GetToKnowMe > h3, #MySkills > h3{
-    text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: bold;
-    font-size: 2.2rem;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-}
-
-#ContactBtnParent{
-    margin-left: 3rem;
-    margin-top: 1.5rem;
-    margin-bottom: 3rem;
-}
-
 #SkillListSection{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    margin-top: 0.67em;
+    margin-bottom: 0.1em;
 }
 
 .skill-list-item{
@@ -358,198 +283,4 @@ footer{
 .icons:hover{
     color: #ed8805;
     cursor: pointer;
-}
-
-/* Styles for large devices */
-
-@media only screen and (min-width:769px){
-    html{
-        font-size: 14px;
-        scroll-behavior: smooth;
-    }
-
-    #MenuForMobileBtn{
-        color: black;
-        border: 1px solid #f07224;
-        padding: 0.8rem;
-        border-radius: 0.6rem;
-    }
-
-    #MenuForMobileBtn:hover{
-        background-color: #c9c2c1;
-        font-weight: 600;
-        border: 1px solid #ed8805;
-        cursor: pointer;
-    }
-
-    #Home{
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        box-sizing: border-box;
-        background-image: url("../Images/Home-Background.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        height: 90vh;
-        margin: 0;
-        padding: 0;
-        border-top: 1px solid #ed8805;
-        border-bottom: 1px solid #ed8805;
-        flex-wrap: wrap;
-    }
-
-    #ProfilePictureSection{
-        width: 40%;
-        height: inherit;
-        box-sizing: border-box;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        margin-block-start: 6rem;
-        margin-block-end: 0;
-    }
-
-    #MyProfilePicture{
-        height: 350px;
-        width: 350px;
-        border-radius: 50%;
-    }
-
-    #ProfileDescription{
-        width: 60%;
-        height: inherit;
-        box-sizing: border-box;
-        padding-right: 1.5rem;
-    }
-
-    #GetToKnowMe{
-        width: 50%;
-        height: inherit;
-        box-sizing: border-box;
-    }
-
-    #MySkills{
-        width: 50%;
-        height: inherit;
-        box-sizing: border-box;
-    }
-
-    #ContactMessage{
-        width: 50%;
-        height: fit-content;
-        font-family: 'Courier New', Courier, monospace;
-        font-size: 1.3rem;
-        font-weight: normal;
-        margin-top: 1.3rem;
-        text-align: center;
-    }
-
-    #ContactFormContainer{
-        width: 50%;
-        height: fit-content;
-        box-sizing: border-box;
-        background-color: #fff;
-        border: 1px solid #d9dadb;
-        border-radius: 0.3rem;
-        margin-top: 2rem;
-        padding-top: 2rem;
-        padding-bottom: 2rem;
-    }
-}
-
-/* Styles for small devices */
-
-@media only screen and (max-width: 768px){
-    html{
-        font-size: 10px;
-        scroll-behavior: smooth;
-    }
-
-    #MenuForMobileBtn{
-        color: black;
-        border: 1px solid #f07224;
-        padding: 0.8rem;
-    }
-
-    #MenuForMobileBtn:hover{
-        background-color: #c9c2c1;
-        font-weight: 600;
-        border: 1px solid #ed8805;
-    }
-
-    #Home{
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        box-sizing: border-box;
-        background-image: url("../Images/Home-Background.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        min-height: 90vh;
-        margin: 0;
-        padding: 0;
-        border-top: 1px solid #ed8805;
-        border-bottom: 1px solid #ed8805;
-        flex-wrap: wrap;
-    }
-    
-    #ProfilePictureSection{
-        width: 100%;
-        height: inherit;
-        box-sizing: border-box;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        margin-block-start: 6rem;
-        margin-block-end: 0;
-    }
-
-    #MyProfilePicture{
-        height: 250px;
-        width: 250px;
-        border-radius: 50%;
-    }
-
-    #ProfileDescription{
-        width: 100%;
-        height: inherit;
-        box-sizing: border-box;
-        padding-right: 1.5rem;
-    }
-
-    #GetToKnowMe{
-        width: 100%;
-        height: inherit;
-        box-sizing: border-box;
-    }
-
-    #MySkills{
-        width: 100%;
-        height: inherit;
-        box-sizing: border-box;
-    }
-
-    #ContactMessage{
-        width: 100%;
-        height: fit-content;
-        font-family: 'Courier New', Courier, monospace;
-        font-size: 1.3rem;
-        font-weight: normal;
-        margin-top: 1.3rem;
-        text-align: center;
-    }
-
-    #ContactFormContainer{
-        width: 90%;
-        height: fit-content;
-        box-sizing: border-box;
-        background-color: #fff;
-        border: 1px solid #d9dadb;
-        border-radius: 0.3rem;
-        margin-top: 2rem;
-        padding-top: 2rem;
-        padding-bottom: 2rem;
-    }
 }
