--- a/CSS/style-large-device.css
+++ b/CSS/style-large-device.css
@@ -7,8 +7,8 @@
     }
 
     #PortfolioLogo{
-        height: 8vh;
-        width: 8vh;
+        height: 50px;
+        width: 50px;
     }
 
     #PortfolioTitle{
@@ -18,7 +18,7 @@
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
 
-    #NavMenuForMobile{
+    #NavMenuForMobile, #nabla{
         display: none;
     }
 
@@ -39,13 +39,13 @@
     
     .nav-link{
         text-decoration: none;
-        color: black;
+        color: #fff;
         border: 1px solid #f07224;
         border-radius: 1.4rem;
         padding: 0.8rem;
     }
     
-    .nav-link.default, .nav-link:hover{
+    .nav-link.active, .nav-link:hover{
         background-color: #ed8805;
         font-weight: bold;
     }
@@ -59,10 +59,9 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
-        height: 90vh;
-        margin: 0;
+        height: calc(100vh - 80px);
+        margin: 80px 0 0 0;
         padding: 0;
-        border-top: 1px solid #ed8805;
         border-bottom: 1px solid #ed8805;
         flex-wrap: wrap;
     }
@@ -70,38 +69,27 @@
     #HomeCoverGreetings{
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         font-size: 4rem;
-        margin-block-start: 6rem;
+        margin-block-start: 0;
         margin-block-end: 0;
-    }
-
-    #ProfilePictureSection{
-        width: 40%;
-        height: inherit;
-        box-sizing: border-box;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        margin-block-start: 6rem;
-        margin-block-end: 0;
-    }
-
-    #MyProfilePicture{
-        height: 350px;
-        width: 350px;
-        border-radius: 50%;
+        margin-top: 5rem;
     }
 
     #ProfileDescription{
-        width: 60%;
+        width: 100%;
         height: inherit;
         box-sizing: border-box;
         padding-right: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     #ShortDescription{
         font-size: 1.55rem;
         margin-top: 3rem;
         margin-bottom: 3rem;
+        padding-left: 3rem;
+        padding-right: 3rem;
     }
 
     #GetToKnowMe{
