--- a/CSS/style-medium-device.css
+++ b/CSS/style-medium-device.css
@@ -3,6 +3,7 @@
     html{
         font-size: 12px;
         scroll-behavior: smooth;
+        --device-size: medium;
     }
 
     #PortfolioLogo{
@@ -135,31 +136,17 @@
         padding-right: 1rem;
         padding-left: 1rem;
         padding-bottom: 1.5rem;
-        border-bottom: 2px solid #ed8805;
     }
 
-    #GetToKnowMe > h3{
-        display: none;
-    }
-
-    #MySkills > h3{
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 3.1rem;
-        text-align: center;
+    #SkillListSection{
         width: 100%;
-        height: fit-content;
-        margin-inline-start: 0;
-        margin-block-end: 0;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
         margin-top: 0.67em;
         margin-bottom: 0.1em;
-        text-transform: uppercase;
-    }
-
-    #MySkills{
-        width: 100%;
-        height: inherit;
-        box-sizing: border-box;
-        padding-bottom: 1.5rem;
     }
 
     #ContactMessage{
