--- a/CSS/style.css
+++ b/CSS/style.css
@@ -111,9 +111,17 @@ header{
     box-sizing: border-box;
 }
 
+#MySkills{
+    width: 100%;
+    min-height: 35vh;
+    box-sizing: border-box;
+    border-top: 1px solid #ed8805;
+    border-bottom: 1px solid #ed8805;
+}
+
 .section-title{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 3.1rem;
+    font-size: 3rem;
     text-align: center;
     width: 100%;
     height: fit-content;
@@ -123,23 +131,13 @@ header{
     margin-bottom: 0.1em;
 }
 
-#AboutMeBody{
+#AboutMeBody, #MySkillsBody{
     width: 100%;
     min-height: 30vh;
     box-sizing: border-box;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-#SkillListSection{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin-top: 0.67em;
-    margin-bottom: 0.1em;
 }
 
 .skill-list-item{
@@ -148,7 +146,7 @@ header{
     padding: 1rem;
     color: black;
     border: 1px solid #f07224;
-    border-radius: 0.8rem;
+    border-radius: 1rem;
     margin: 0.5rem;
 }
 
@@ -253,6 +251,9 @@ footer{
     background-color: black;
     color: #fff;
     border-top: 1px solid #ed8805;
+    border-left: 2px solid #ed8805;
+    border-bottom: 2px solid #ed8805;
+    border-right: 2px solid #ed8805;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -264,6 +265,13 @@ footer{
     font-family: 'Courier New', Courier, monospace;
     font-weight: 500;
     font-size: 1.2rem;
+    margin: 0.4rem 0 0.4rem 0;
+}
+
+.footer-title{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    font-size: 1.8rem;
     margin: 0.4rem 0 0.4rem 0;
 }
 
