--- a/CSS/style-large-device.css
+++ b/CSS/style-large-device.css
@@ -103,17 +103,6 @@
         padding-bottom: none;
     }
 
-    #SkillListSection{
-        width: 65%;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
-        margin-top: 0.67em;
-        margin-bottom: 0.1em;
-    }
-
     #GetToKnowMe > p{
         font-family: 'Courier New', Courier, monospace;
         font-size: 1.3rem;
@@ -127,6 +116,80 @@
         margin-left: 3rem;
         margin-top: 1.5rem;
         margin-bottom: 1.5rem;
+    }
+
+    .skills-category{
+        height: fit-content;
+        width: 30rem;
+        padding: 0 1rem;
+        border: 1.5px solid #ed8805;
+        border-radius: 0.5rem;
+        background-color: #fff;
+        margin: 1rem;
+        box-sizing: border-box;
+    }
+
+    .category-heading{
+        height: fit-content;
+        width: 100%;
+        font-size: 1.5rem;
+        font-weight: 600;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        text-align: center;
+    }
+
+    .project-item{
+        width: 30rem;
+        height: fit-content;
+        padding: 1.5rem;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        border: 1.5px solid #ed8805;
+        border-radius: 0.5rem;
+        margin: 1rem;
+        background-color: #fff;
+    }
+
+    .project-item:hover, .skills-category:hover{
+        border-radius: 0.8rem;
+        background-color: #E3E0E0;
+        transition: all 400ms ease-in-out;
+    }
+
+    .project-image-section{
+        width: 100%;
+        height: 100%;
+        padding: 0 0.5rem;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    .project-image{
+        width: 100%;
+        height: 18rem;
+    }
+
+    .project-description{
+        width: 100%;
+        height: 100%;
+        padding: 0 0.5rem;
+        line-height: 1.7rem;
+        box-sizing: border-box;
+    }
+
+    .project-description > p{
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 1.3rem;
+    }
+
+    .project-description > h2{
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 1.8rem;
+        font-weight: 600;
+        text-align: center;
     }
 
     #ContactMessage{
