--- a/CSS/style-small-device.css
+++ b/CSS/style-small-device.css
@@ -131,7 +131,7 @@
     }
 
     #GetToKnowMe{
-        width: 100%;
+        width: 95%;
         height: inherit;
         box-sizing: border-box;
         padding-right: 1rem;
@@ -139,15 +139,70 @@
         padding-bottom: 1.5rem;
     }
 
-    #SkillListSection{
+    .skills-category{
+        height: fit-content;
+        width: 70%;
+        padding: 0 1rem;
+        border: 1.5px solid #ed8805;
+        border-radius: 0.5rem;
+        background-color: #fff;
+        margin: 1rem;
+        box-sizing: border-box;
+    }
+
+    .category-heading{
+        height: fit-content;
         width: 100%;
+        font-size: 1.5rem;
+        font-weight: 600;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        text-align: center;
+    }
+
+    .project-item{
+        width: 70%;
+        height: fit-content;
+        padding: 2vh 1vw;
+        box-sizing: border-box;
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
+        flex-direction: column;
         align-items: center;
         justify-content: center;
-        margin-top: 0.67em;
-        margin-bottom: 0.1em;
+    }
+
+    .project-image-section{
+        width: 100%;
+        height: 100%;
+        padding: 1rem;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+    .project-image{
+        width: 100%;
+        height: 30rem;
+        border-radius: 0.7rem;
+    }
+
+    .project-description{
+        width: 100%;
+        height: 100%;
+        padding: 0.5rem;
+        line-height: 1.7rem;
+        box-sizing: border-box;
+    }
+
+    .project-description > p{
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 1.55rem;
+    }
+
+    .project-description > h2{
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        font-size: 2rem;
+        font-weight: 600;
+        text-align: center;
     }
 
     #ContactMessage{
