--- a/CSS/style.css
+++ b/CSS/style.css
@@ -131,13 +131,34 @@ header{
     margin-bottom: 0.1em;
 }
 
-#AboutMeBody, #MySkillsBody{
+#AboutMeBody{
     width: 100%;
-    min-height: 30vh;
+    min-height: 40vh;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#ProjectsBody, #MySkillsBody{
+    width: 100%;
+    min-height: 40vh;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content:  center;
+    flex-wrap: wrap;
+}
+
+.skill-list{
+    height: fit-content;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .skill-list-item{
@@ -150,14 +171,9 @@ header{
     margin: 0.5rem;
 }
 
-.skill-list-item:hover{
-    background-color: #ed8805;
-    font-weight: bold;
-}
-
 #Projects{
     width: 100%;
-    min-height: 50vh;
+    height: fit-content;
     border-top: 1px solid #ed8805;
     border-bottom: 1px solid #ed8805;
     box-sizing: border-box;
